# usg-tacacs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  config.example.json  config.schema.json  sbom.spdx.json
.github/workflows/: docs.yml
ansible/: README.md  requirements.yml
ansible/inventory/production/: hosts.yml
ansible/inventory/production/group_vars/: all.yml  etcd.yml  frr_anycast.yml  haproxy.yml  patroni.yml  pgbouncer.yml
ansible/inventory/production/group_vars/locations/: NYC01.yml
ansible/playbooks/: deploy-bgp-anycast.yml  deploy-haproxy.yml  deploy-postgresql-ha.yml  deploy.yml  rollback.yml  rotate-certs.yml  upgrade.yml
ansible/roles/etcd/defaults/: main.yml
ansible/roles/etcd/handlers/: main.yml
ansible/roles/etcd/meta/: main.yml
ansible/roles/etcd/tasks/: main.yml
ansible/roles/etcd/templates/: etcd.conf.yml.j2  etcd.service.j2
ansible/roles/frr_anycast/defaults/: main.yml
ansible/roles/frr_anycast/handlers/: main.yml
ansible/roles/frr_anycast/meta/: main.yml
ansible/roles/frr_anycast/tasks/: main.yml
ansible/roles/frr_anycast/templates/: anycast-vip.conf.j2  daemons.j2  frr.conf.j2  ifcfg-lo1.j2  tacacs-anycast-health.service.j2  tacacs-health-check.sh.j2
ansible/roles/patroni/defaults/: main.yml
ansible/roles/patroni/handlers/: main.yml
ansible/roles/patroni/meta/: main.yml
ansible/roles/patroni/tasks/: main.yml
ansible/roles/patroni/templates/: patroni.service.j2  patroni.yml.j2
ansible/roles/pgbouncer/defaults/: main.yml
ansible/roles/pgbouncer/handlers/: main.yml
ansible/roles/pgbouncer/meta/: main.yml
ansible/roles/pgbouncer/tasks/: main.yml
ansible/roles/pgbouncer/templates/: pgbouncer.ini.j2  pgbouncer.service.j2  userlist.txt.j2
ansible/roles/tacacs_common/defaults/: main.yml
ansible/roles/tacacs_common/meta/: main.yml
ansible/roles/tacacs_common/tasks/: main.yml
ansible/roles/tacacs_ha/defaults/: main.yml
ansible/roles/tacacs_ha/handlers/: main.yml
ansible/roles/tacacs_ha/meta/: main.yml
ansible/roles/tacacs_ha/tasks/: main.yml
ansible/roles/tacacs_ha/templates/: check_tacacs.sh.j2  haproxy-override.conf.j2  haproxy.cfg.j2  keepalived.conf.j2
ansible/roles/tacacs_openbao/meta/: main.yml
ansible/roles/tacacs_server/defaults/: main.yml
ansible/roles/tacacs_server/handlers/: main.yml
ansible/roles/tacacs_server/meta/: main.yml
ansible/roles/tacacs_server/tasks/: main.yml
ansible/roles/tacacs_server/templates/: config.json.j2  policy.json.j2  tacacs-server.service.j2
ansible/roles/tacacs_sops/meta/: main.yml
container/: Dockerfile  Dockerfile.ingest  docker-compose.yml
container/frr/: daemons  frr.conf  health-watch.sh
container/haproxy/: haproxy.cfg
crates/tacacs-policy/: Cargo.toml
crates/tacacs-policy-ingest/: Cargo.toml  README.md
crates/tacacs-policy-ingest/schemas/: config.schema.json
crates/tacacs-policy-ingest/sql/: schema.sql
crates/tacacs-policy-ingest/src/: api.rs  bundle.rs  db.rs  main.rs  schema.rs  tls.rs  tls_allowlist.rs
crates/tacacs-policy/src/: lib.rs
crates/tacacs-proto/: Cargo.toml
crates/tacacs-proto/src/: accounting.rs  authen.rs  author.rs  capability.rs  client.rs  crypto.rs  header.rs  lib.rs  util.rs
crates/tacacs-secrets/: Cargo.toml
crates/tacacs-secrets/src/: config.rs  lib.rs  provider.rs
crates/tacacs-secrets/src/openbao/: auth.rs  client.rs  kv.rs  mod.rs  pki.rs
crates/tacacs-server/: Cargo.toml
crates/tacacs-server/src/: ascii.rs  auth.rs  config.rs  http.rs  main.rs  metrics.rs  policy.rs  server.rs  session.rs  telemetry.rs  tls.rs
crates/tacacs-server/src/api/: handlers.rs  mod.rs  models.rs  rbac.rs
dashboards/: tacacs-overview.json
docs/: .gitignore  README.md  pyproject.toml  zensical.toml
docs/docs/: authentication.md  config.md  container.md  dev_setup.md  index.md  operations.md  policy-ingest.md  policy.md  tls.md
docs/docs/admin/: index.md  security.md
docs/docs/dev/: index.md  protocol.md
docs/docs/rfc/: index.md
docs/docs/user/: device-config.md  index.md
packer/: README.md
policy/: policy.example.json  policy.schema.json
scripts/: build.sh  generate_sbom.py
scripts/workflows/: github_enterprise.yml  gitlab.yml
terraform/: README.md
