[package]
name = "tacacs-policy-ingest"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
license-file = "LICENSE"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# TLS + mTLS (match axum-server)
rustls = "0.23"
rustls-pemfile = "2.1"

# Bundle parsing
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
bytes = "1.7"
x509-parser = "0.16"

# JSON Schema validation
jsonschema = "0.18"

# DB
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "time",
    "macros",
] }
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
