[package]
name = "usg-tacacs-policy"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
license-file = "LICENSE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
jsonschema = { version = "0.17", features = ["draft202012"] }
hex = "0.4"
