[package]
name = "usg-tacacs-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
anyhow.workspace = true
jsonschema.workspace = true
hex.workspace = true
tracing.workspace = true
