[package]
name = "usg-tacacs-proto"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
license-file = "LICENSE"

[features]
default = ["legacy-md5"]
legacy-md5 = ["openssl"]

[dependencies]
bytes = "1"
anyhow = "1"
tokio = { version = "1", features = ["io-util"] }
openssl = { version = "0.10", optional = true }
log = "0.4"
