[package]
name = "usg-tacacs-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["legacy-md5"]
legacy-md5 = ["openssl"]

[dependencies]
bytes.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["io-util"] }
openssl = { workspace = true, optional = true }
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
