[package]
name = "usg-tacacs-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "time"] }
clap.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
usg-tacacs-policy.workspace = true
usg-tacacs-proto.workspace = true
openssl.workspace = true
hex.workspace = true
ldap3.workspace = true
argon2.workspace = true
